--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.html
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.html
@@ -321,16 +321,16 @@
                         />
                         <span class="checkmark"></span>
                       </label>
-                     <label *ngFor="let number of [].constructor(AGE_LIMIT); let i = index" class="checkbox">
-                      <span>{{ i + 1 }}</span>
-                      <input
-                        type="checkbox"
-                        name="age"
-                        [checked]="ideaFilters.age.includes((i + 1).toString())"
-                        (change)="setAge(i + 1)"
-                      />
-                      <span class="checkmark"></span>
-                    </label>
+                      <label *ngFor="let number of [].constructor(AGE_LIMIT); let i = index" class="checkbox">
+                        <span>{{ i + 1 }}</span>
+                        <input
+                          type="checkbox"
+                          name="age"
+                          [checked]="ideaFilters.age.includes((i + 1).toString())"
+                          (change)="setAge(i + 1)"
+                        />
+                        <span class="checkmark"></span>
+                      </label>
                     </div>
                   </div>
                 </cos-input>
@@ -460,7 +460,7 @@
 
                   <a class="filter_option" (click)="mobileIdeaFilters.age = true">
                     <span class="filter_option_text" translate="VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_AGE"></span>
-                    <span class="bold">{{(ideaFilters.age) ? ideaFilters.age : 'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate}}</span>
+                    <span class="bold">{{ideaFilters.age.length > 0 ? sortedSelectedAges : 'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate}}</span>
                   </a>
 
                   <a class="filter_option" (click)="mobileIdeaFilters.gender = true">
@@ -633,21 +633,30 @@
                   </a>
 
                   <div class="options_wrapper">
-                    <label class="checkbox" (click)="mobileIdeaFilters.age = 'all';">
-                      <span [innerHTML]="'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate | titlecase"></span>
-                      <input type="radio" name="orderBy">
-                      <span class="checkmark"></span>
-                    </label>
-
-                    <label *ngFor="let number of [].constructor(AGE_LIMIT); let i = index" class="checkbox" (click)="mobileIdeaFilters.age = i + 1;">
-                      <span>{{ i + 1 }}</span>
-                      <input type="radio" name="age">
-                      <span class="checkmark"></span>
-                    </label>
+                    <label class="checkbox" (click)="setMobileAge('')">
+                        <span [innerHTML]="'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate | titlecase"></span>
+                        <input 
+                          type="checkbox"
+                          name="age"
+                          [checked]="ideaFilters.age.length === 0 || ideaFilters.age.length === AGE_LIMIT"
+                          (change)="setAge('', false)"
+                        />
+                        <span class="checkmark"></span>
+                      </label>
+                      <label *ngFor="let number of [].constructor(AGE_LIMIT); let i = index" class="checkbox">
+                        <span>{{ i + 1 }}</span>
+                        <input
+                          type="checkbox"
+                          name="age"
+                          [checked]="ideaFilters.age.includes((i + 1).toString())"
+                          (change)="setAge(i + 1, false)"
+                        />
+                        <span class="checkmark"></span>
+                      </label>
                   </div>
 
                   <button class="btn_medium_secondary"
-                    (click)="setAge(mobileIdeaFilters.age);mobileIdeaFilters.age= false;"
+                    (click)="applyAgeFilter();mobileIdeaFilters.age= false;"
                     translate="COMPONENTS.TOPIC_IDEATION.BTN_APPLY"></button>
                 </div>
 
