--- a/src/styles.scss
+++ b/src/styles.scss
@@ -361,6 +361,8 @@ input {
       justify-content: space-between;
       background-color: var(--color-background);
       border-radius: 16px;
+      gap: 8px;
+      text-align: right;
 
       .filter_option_text {
         color: var(--color-text);
