--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.html
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.html
@@ -292,7 +292,7 @@
                     </div>
                   </div>
                 </cos-input>
-              
+
                 <cos-input *ngIf="hasDemograficsField.age" [placeholder]="'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_AGE' | translate"
                   class="dropdown_input">
                   <div class="dropdown" [cosDropdown]>
@@ -353,7 +353,7 @@
                     </div>
                   </div>
                 </cos-input>
- 
+
                 <cos-input *ngIf="isCountryEstonia && hasDemograficsField.residence" [placeholder]="'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_RESIDENCE' | translate"
                   class="dropdown_input">
                   <div class="dropdown" [cosDropdown]>
@@ -617,15 +617,24 @@
                   </a>
 
                   <div class="options_wrapper">
-                    <label class="checkbox" (click)="mobileIdeaFilters.age = 'all';">
+                    <label class="checkbox" (click)="setMobileAges('')">
                       <span [innerHTML]="'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate | titlecase"></span>
-                      <input type="radio" name="orderBy">
+                      <input
+                        type="checkbox"
+                        name="age"
+                        [checked]="mobileAges.length === 0 || mobileAges.length === AGE_LIMIT"
+                        (change)="setMobileAges('')"
+                      />
                       <span class="checkmark"></span>
                     </label>
-
-                    <label *ngFor="let number of [].constructor(AGE_LIMIT); let i = index" class="checkbox" (click)="mobileIdeaFilters.age = i + 1;">
+                    <label *ngFor="let number of [].constructor(AGE_LIMIT); let i = index" class="checkbox">
                       <span>{{ i + 1 }}</span>
-                      <input type="radio" name="age">
+                      <input
+                        type="checkbox"
+                        name="age"
+                        [checked]="mobileAges.includes((i + 1).toString())"
+                        (change)="setMobileAges(i + 1)"
+                      />
                       <span class="checkmark"></span>
                     </label>
                   </div>
