--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.html
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.html
@@ -293,14 +293,15 @@
                   </div>
                 </cos-input>
               
+                <!-- here -->
                 <cos-input *ngIf="hasDemograficsField.age" [placeholder]="'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_AGE' | translate"
                   class="dropdown_input">
                   <div class="dropdown" [cosDropdown]>
                     <div class="selection">
                       <div class="selected_item">
-                        <span *ngIf="!ideaFilters.age" translate="COMPONENTS.TOPIC_IDEATION.FILTER_ALL"></span>
-                        <span *ngIf="ideaFilters.age">
-                          {{ideaFilters.age}}
+                        <span *ngIf="ideaFilters.age.length === 0" translate="COMPONENTS.TOPIC_IDEATION.FILTER_ALL"></span>
+                        <span *ngIf="ideaFilters.age.length !== 0">
+                          {{sortedSelectedAges}}
                         </span>
                       </div>
                       <div><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -310,11 +311,26 @@
                       </div>
                     </div>
                     <div class="options">
-                      <div class="option" (click)="setAge('')" translate="COMPONENTS.TOPIC_IDEATION.FILTER_ALL">
-                      </div>
-                      <div *ngFor="let number of [].constructor(AGE_LIMIT); let i = index" class="option" (click)="setAge((i + 1))">
-                        {{ i + 1 }}
-                      </div>
+                      <label class="checkbox" (click)="setAge('')">
+                        <span [innerHTML]="'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate | titlecase"></span>
+                        <input 
+                          type="checkbox"
+                          name="age"
+                          [checked]="ideaFilters.age.length === 0 || ideaFilters.age.length === AGE_LIMIT"
+                          (change)="setAge('')"
+                        />
+                        <span class="checkmark"></span>
+                      </label>
+                      <label *ngFor="let number of [].constructor(AGE_LIMIT); let i = index" class="checkbox">
+                        <span>{{ i + 1 }}</span>
+                        <input
+                          type="checkbox"
+                          name="age"
+                          [checked]="ideaFilters.age.includes((i + 1).toString())"
+                          (change)="setAge(i + 1)"
+                        />
+                        <span class="checkmark"></span>
+                      </label>
                     </div>
                   </div>
                 </cos-input>
@@ -444,7 +460,7 @@
 
                   <a class="filter_option" (click)="mobileIdeaFilters.age = true">
                     <span class="filter_option_text" translate="VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_AGE"></span>
-                    <span class="bold">{{(ideaFilters.age) ? ideaFilters.age : 'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate}}</span>
+                    <span class="bold">{{ideaFilters.age.length > 0 ? sortedSelectedAges : 'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate}}</span>
                   </a>
 
                   <a class="filter_option" (click)="mobileIdeaFilters.gender = true">
@@ -617,21 +633,30 @@
                   </a>
 
                   <div class="options_wrapper">
-                    <label class="checkbox" (click)="mobileIdeaFilters.age = 'all';">
+                    <label class="checkbox" (click)="setMobileAges('')">
                       <span [innerHTML]="'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate | titlecase"></span>
-                      <input type="radio" name="orderBy">
+                      <input 
+                        type="checkbox"
+                        name="age"
+                        [checked]="mobileAges.length === 0 || mobileAges.length === AGE_LIMIT"
+                        (change)="setMobileAges('')"
+                      />
                       <span class="checkmark"></span>
                     </label>
-
-                    <label *ngFor="let number of [].constructor(AGE_LIMIT); let i = index" class="checkbox" (click)="mobileIdeaFilters.age = i + 1;">
+                    <label *ngFor="let number of [].constructor(AGE_LIMIT); let i = index" class="checkbox">
                       <span>{{ i + 1 }}</span>
-                      <input type="radio" name="age">
+                      <input
+                        type="checkbox"
+                        name="age"
+                        [checked]="mobileAges.includes((i + 1).toString())"
+                        (change)="setMobileAges(i + 1)"
+                      />
                       <span class="checkmark"></span>
                     </label>
                   </div>
 
                   <button class="btn_medium_secondary"
-                    (click)="setAge(mobileIdeaFilters.age);mobileIdeaFilters.age= false;"
+                    (click)="applyAgeFilter();mobileIdeaFilters.age= false;"
                     translate="COMPONENTS.TOPIC_IDEATION.BTN_APPLY"></button>
                 </div>
 
