--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.html
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.html
@@ -862,7 +862,7 @@
                 <ideabox *ngFor="let idea of ideas" [topic]="topic" [ideation]="ideation" [idea]="idea">
                 </ideabox>
               </ng-container>
-              <ng-container *ngIf="ideas.length === 0">
+              <ng-container *ngIf="ideas.length === 0 && filtersSet">
                 <div translate="COMPONENTS.TOPIC_IDEATION.NO_ITEMS_FOUND"></div>
               </ng-container>
               <div class="pagination_wrap">
