--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.scss
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.scss
@@ -226,12 +226,31 @@
     gap: 24px;
     width: 100%;
 
+    .options_row_main {
+      width: 100%;
+      display: flex;
+      gap: 16px;
+
+      .dropdown_input {
+        width: 100%;
+      }
+    }
+
     .dropdown_input {
       width: calc(100% / 3 - 16px);
     }
 
     .search_input {
       flex-grow: 1;
+      padding: 0 16px 0 16px;
+
+      cos-input {
+        flex-grow: 1;
+      }
+
+      button {
+        padding: 0;
+      }
     }
   }
 }
@@ -420,7 +439,7 @@
     background-color: var(--color-ideation-light);
     border-radius: 8px;
     justify-content: space-between;
-    border: 1px solid var(--Yellow-50, #FDF0C3);
+    border: 1px solid var(--Yellow-50, #fdf0c3);
     gap: 16px;
     padding: 8px 16px;
   }
@@ -453,11 +472,11 @@
 
 .mobile_filters_selection {
   .btn_medium_plain {
-    background-color: transparent; 
+    background-color: transparent;
     &:hover {
       background-color: transparent;
     }
-    
+
     &.icon {
       svg {
         position: static;
