--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.html
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.html
@@ -553,7 +553,7 @@
                   </ng-container>
 
                   <div class="input_area search_input">
-                    <button (click)="showSearch = true">
+                    <button (click)="showSearch = true" class="search_start">
                       <svg
                         width="24"
                         height="24"
@@ -567,6 +567,24 @@
                           d="M14.1922 15.6064C13.0236 16.4816 11.5723 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10C17 11.5723 16.4816 13.0236 15.6064 14.1922L19.7071 18.2929C20.0976 18.6834 20.0976 19.3166 19.7071 19.7071C19.3166 20.0976 18.6834 20.0976 18.2929 19.7071L14.1922 15.6064ZM15 10C15 12.7614 12.7614 15 10 15C7.23858 15 5 12.7614 5 10C5 7.23858 7.23858 5 10 5C12.7614 5 15 7.23858 15 10Z"
                           fill="#727C84"
                         />
+                      </svg>
+
+                      <svg
+                        *ngIf="ideaFilters.search && !showSearch"
+                        class="text_exist_icon"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 16 16"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          _ngcontent-ng-c1765142405=""
+                          fill-rule="evenodd"
+                          clip-rule="evenodd"
+                          d="M8 0C3.584 0 0 3.584 0 8C0 12.416 3.584 16 8 16C12.416 16 16 12.416 16 8C16 3.584 12.416 0 8 0ZM6.44444 12L12.6667 5.82456L11.5 4.66667L6.44444 9.68421L4.5 7.75439L3.33333 8.91228L6.44444 12Z"
+                          fill="#2c3b47"
+                        ></path>
                       </svg>
                     </button>
 
