--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.html
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.html
@@ -170,7 +170,7 @@
         ></div>
         <div class="deadline">
           <span class="bold">{{
-            ideation.deadline | date : "YYYY-MM-dd HH:mm"
+            ideation.deadline | date : "y-MM-dd HH:mm"
           }}</span>
         </div>
       </div>
@@ -186,7 +186,7 @@
             <div translate="COMPONENTS.TOPIC_IDEATION.TXT_IDEATION_ENDED"></div>
           </div>
         </div>
-        <ng-container *ngIf="ideas$ | async as ideas">
+        <ng-container *ngIf="ideas$ | async as ideas" defer>
           <ng-container *ngIf="ideas.length || filtersSet">
             <div class="tabs_wrap">
               <div class="tabs_row" *ngIf="tabSelected !== 'folder'">
@@ -1802,6 +1802,9 @@
                 </div>
               </div>
             </div>
+            <ng-container *ngIf="ideas.length > 0 && filtersSet">
+              <div translate="COMPONENTS.TOPIC_IDEATION.ITEMS_FOUND_WITH_FILTERS" [translateParams]="{count: ideasCount$ | async}"></div>
+            </ng-container>
             <div class="ideas_wrap">
               <div
                 class="notification_inline"
@@ -2139,7 +2142,7 @@
                         <span
                           class="updated mobile_show"
                           [innerText]="
-                            folder.updatedAt | date : 'YYYY-MM-dd HH:mm'
+                            folder.updatedAt | date : 'y-MM-dd HH:mm'
                           "
                         ></span>
                       </div>
@@ -2150,7 +2153,7 @@
                     ></div>
                     <div
                       class="cell date_cell mobile_hidden"
-                      [innerText]="folder.updatedAt | date : 'YYYY-MM-dd HH:mm'"
+                      [innerText]="folder.updatedAt | date : 'y-MM-dd HH:mm'"
                     ></div>
                     <div class="cell actions_cell" *ngIf="canEdit()">
                       <div class="dropdown button_dropdown" [cosDropdown]>
